syntax = "proto3";
package raft;

option go_package = "github.com/aunchagaonkar/golt/proto/raft";

enum NodeState {
    FOLLOWER = 0;
    CANDIDATE = 1;
    LEADER = 2;
}

enum CommandType {
  SET = 0;
  DELETE = 1;
}

message Command {
  CommandType type = 1;
  string key = 2;
  string value = 3;
}

message LogEntry {
    uint64 term = 1;
    uint64 index = 2;
    Command command = 3;
}

message RequestVoteRequest {
    uint64 term = 1;
    string candidateId = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponse {
    uint64 term = 1;
    bool voteGranted = 2;
}

message AppendEntriesRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntriesResponse {
    uint64 term = 1;
    bool success = 2;
}

message PingRequest {
    string nodeId = 1;
}

message PingResponse {
    string nodeId = 1;
    NodeState state = 2;
    uint64 term = 3;
}

message InstallSnapshotRequest {
    uint64 term = 1;
    string leaderId = 2;
    uint64 lastIncludedIndex = 3;
    uint64 lastIncludedTerm = 4;
    map<string, string> data = 5;
}

message InstallSnapshotResponse {
    uint64 term = 1;
}

service RaftService {
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
    rpc AppendEntries(AppendEntriesRequest) returns (AppendEntriesResponse);
    rpc InstallSnapshot(InstallSnapshotRequest) returns (InstallSnapshotResponse);
    rpc Ping(PingRequest) returns (PingResponse);
}